fix footer logo's alignment

--- a/themes/lazy/assets/css/_layout.scss
+++ b/themes/lazy/assets/css/_layout.scss
@@ -73,6 +73,8 @@ body.grid-on {
   margin-bottom: 0;
   line-height: 0;
   display: inline-block;
+  top: 3px;
+  position: relative;
 }
 
 .main-content--no-sidebar {
